--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>htmlcss-struttura-discord</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <header>
+        <section class="flex orange">
+            <div class="border width-logo">logo</div>
+            <div class="border width-navbar">
+                <ul class="flex">
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </div>
+            <div class="border text-align width-logo">login</div>
+        </section>
+    </header>
+
+
+
 </body>
 </html>
