--- a/index.html
+++ b/index.html
@@ -27,13 +27,37 @@
             </section> 
         </header>
         <main>
-            <section class="">
-                <div class="bluebackground">
-                    <div class="pinksquare border">
-
+            <section>
+                <div class="bluebackground flex content">
+                    <div class="lightpinksquare border">
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="flex content">
+                    <div class="bluesquare border">
+                    </div>
+                    <div class="pinksquare border">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="greybackground flex content">
+                    <div class="bluesquare border order">
+                    </div>
+                    <div class="pinksquare border">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="flex content">
+                    <div class="bluesquare border">
+                    </div>
+                    <div class="pinksquare border">
+                    </div>
+                </div>
+            </section>
+            
         </main>
 
     </body>
