--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="greybackground flex content">
+                    <div class="greensquare border">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="blackbackground flex content">
+                    <div class="greensquare border">
+                    </div>
+                </div>
+            </section>
             
         </main>
 
