--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </section>
             <section>
                 <div class="greybackground flex content">
+                    
                     <div class="bluesquare border order">
                     </div>
                     <div class="pinksquare border">
@@ -65,12 +66,24 @@
             </section>
             <section>
                 <div class="blackbackground flex content">
-                    <div class="greensquare border">
+                    <div class="pinksquare border">
                     </div>
+                    <div class="lightblue border"></div>
+                    <div class="lightblue border"></div>
+                    <div class="lightblue border"></div>
+                    <div class="lightblue border"></div>
                 </div>
+                <hr>
             </section>
-            
         </main>
 
+        <footer>
+            <section class="nav">
+                <div class="flex cyan footer-buttons">
+                    <div class="border  pinkbuttons">logo</div>
+                    <div class="border pinkbuttons">bottone</div>
+                </div>
+            </section> 
+        </footer>
     </body>
     </html>
